--- a/graph.html
+++ b/graph.html
@@ -28,6 +28,7 @@
       var g = makeGraph();
 
       (function (divID, ht, wd) {
+         var g = makeGraph();
          var paper = Raphael(document.getElementById(divID), wd, ht);
          drawGraph(g, paper, ht, wd, new Coordinate(0, 0));
          })("hw1graph", 400, 500);
@@ -38,9 +39,13 @@
     
     <script>
       (function (divID, ht, wd) {
+         var g = makeGraph();
+         var qht = 50;
          var paper = Raphael(document.getElementById(divID), wd, ht);
-         BFSGraphSearch(g);
-         drawGraph(g, paper, ht, wd, new Coordinate(0, 0));
+         var log = BFGraphSearch(g);
+         var logAnimator = new AnimateLog(
+           paper, qht, wd, new Coordinate(0, ht - qht), g, log);
+         drawGraph(g, paper, ht - qht, wd, new Coordinate(0, 0), logAnimator);
          })("graphBFS", 400, 500);
     </script>
 
